Try to fix toast being behind overlay

--- a/wv8-finance-front-end/src/app/@theme/styles/_overrides.scss
+++ b/wv8-finance-front-end/src/app/@theme/styles/_overrides.scss
@@ -51,4 +51,8 @@
   [nbInput].size-small::placeholder {
     font-size: 0.8125rem;
   }
+
+  .cdk-overlay-pane {
+    z-index: 1100;
+  }
 }
